Adding a 'Clear data' button and its logic

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header id="header">
         <img src="static/img/habits-logo.svg" alt="A dashed line with purple gradient over the word Habit">
         <button class="header-button">
-            <img src="static/img/plus.svg" alt="A purple plu icon">
+            <img src="static/img/plus.svg" alt="A purple plus icon">
             <h4 class="header-button-txt">Registrar meu dia</h4>
         </button>
     </header>
@@ -37,6 +37,12 @@
         
         <section class="days"></section>
     </form>
+
+    <section id="clear">
+        <button class="clear-button">
+            <h4 class="clear-button-txt">Limpar dados</h4>
+        </button>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/gh/maykbrito/libs/NLWSetup/source/NLWSetup.js"></script>
     <script src="static/js/script.js"></script>
